--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
+  
 <html>
+  
+
+  <div class="navbar">
+    <div class="navbar-inner">
+      <a class="brand" href="#">Just Did it</a>
+    </div>
+  </div>
+
+
 <head>
   <title>SharedTodoApp</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
@@ -9,6 +19,9 @@
 <body>
 
 <%= yield %>
+
+
+
 
 </body>
 </html>
