--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,9 +1,69 @@
 <title>Shared Todo App </title>
-<h1>Shared Todo App</h1>
-<p>All your todos here</p>
+<div class="container">
+  <div class="row">
+    <div class="span4">
+      <h1>Shared Todo App</h1>
+      <hr>
+      <p>All your todos here</p>
   
-<ul>
-  <% @todo_array.each do |t| %>
-   <li> <%= t %> </li>
-   <% end %>
+<%= submit_tag("Complete Todos", :class=>"btn btn-success") %>
+<%end %>
+             
+ <%= form_for @new_todo, :url => { :action => "add" }  do |f|  %>
+    <%= f.text_field  :todo_item %>
+    <%= f.submit "Add todo", class: "btn btn-primary" %>
+ <%end%>
+
+   
+<% if flash[:error] %>
+ <div class="alert alert-error">
+    <button type="button" class="close" data-dismiss="alert" >×</button>
+    <strong><%= flash[:error] %></strong>
+    </div>
+<% end %>
+
+  <% if flash[:success] %>
+   <div class="alert alert-success">
+   <button type="button" class="close" data-dismiss="alert" >×</button>
+     <strong><%= flash[:success] %></strong>
+   </div>
+  <% end %>
+  <div class="well">
+     
+<%= form_tag("/todos/complete/", :method => "post") do %>
+<ul style="list-style-type:none;">
+<% @todo_items.each do |t| %> 
+     <% if t.completed == true %>
+     <li style="color:grey;"> <%= check_box_tag  "todos_checkbox[]",t.id %>  
+ <strike><%= t.todo_item %></strike> </li>
+  <% else %>
+     <li> <%= check_box_tag  "todos_checkbox[]",t.id %> <%= t.todo_item %>  </li>
+  <% end %>
+<% end %>
+  <% end %>
+
 </ul>
+<%= submit_tag("Complete Todos", :class=>"btn btn-success") %>
+
+  <%= form_tag("/todos/complete/", :method => "post") do %>
+<ul style="list-style-type:none;">
+<% @todo_items.each do |t| %> 
+     <% if t.completed == true %>
+     <li style="color:grey;"> <%= check_box_tag  "todos_checkbox[]",t.id %>  
+ <strike><%= t.todo_item %></strike> </li>
+  <% else %>
+     <li> <%= check_box_tag  "todos_checkbox[]",t.id %> <%= t.todo_item %>  </li>
+  <% end %>
+
+      
+
+
+  
+  <%= link_to "Delete last todo", delete_path %>
+
+
+        
+      </div> <!-- well -->
+    </div> <!-- span4 -->
+  </div> <!-- row -->
+</div> <!-- container -->
